Temporary fix for nav on mobile devices
This is a really sad fix, I know. I have future plans, but no time.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,6 +56,7 @@ header{
     a{
       text-transform: uppercase;
       font-size: 14px;
+      background-color: #333;
     }
 
     a:hover{
